# bg-removal-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  utils.py
app/services/: auth.py  remover.py
tests/: test_api.py
