[project]
name = "bg-removal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "onnxruntime>=1.22.1",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "rembg>=2.0.67",
    "uvicorn>=0.37.0",
]
