[project]
name = "bg-removal-api"
version = "0.1.0"
description = "Background removal API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "onnxruntime>=1.22.1",
    "psutil>=7.1.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-multipart>=0.0.20",
    "rembg>=2.0.67",
    "uvicorn>=0.37.0",
]
